[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
certifi = "^2024.8.30"
cffi = "^1.17.1"
charset-normalizer = "^3.3.2"
crispy-bootstrap5 = "^2024.10"
cryptography = "^43.0.1"
defusedxml = "^0.7.1"
django = "^5.1.1"
django-allauth = "^65.0.2"
django-crispy-forms = "^2.3"
django-debug-toolbar = "^4.4.6"
gunicorn = "^23.0.0"
idna = "^3.10"
oauthlib = "^3.2.2"
packaging = "^24.1"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"
pycparser = "^2.22"
pyjwt = "^2.9.0"
python3-openid = "^3.2.0"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
sqlparse = "^0.5.1"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.3"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
